# brewery

./: .gitignore  .pre-commit-config.yaml  Justfile  pyproject.toml
scripts/: fix_entry_point.py
src/brewery/: __init__.py
src/brewery/analysis/: status.py
src/brewery/app/: keymap.py  main.py  theme.py
src/brewery/app/widgets/: command_palette.py  details_panel.py  filters_panel.py  logs_panel.py  package_table.py
src/brewery/backends/: base.py  brew_cask.py  brew_common.py  brew_formula.py
src/brewery/cli/: error_formatting.py  main.py  renderers.py
src/brewery/core/: batch_runner.py  cache.py  catalog.py  catalog_api.py  catalog_parser.py  config.py  decorators.py  dep_graph.py  errors.py  fs_state.py  host.py  keg_sizes.py  logging.py  merge.py  models.py  repo.py  settings.py  shell.py  store.py  symlink_map.py  task_manager.py
src/brewery/core/catalog/: __init__.py  api.py  parser.py  store.py
src/brewery/daemon/: catalog_refresh.py  daemon.py  outdated_refresh.py
src/brewery/providers/: base.py  brew.py  brew_cask.py  brew_formula.py  brew_outdated.py  catalog_api.py  cellar.py  downloader.py  extractor.py  install_adapters.py  install_service.py  linker.py  manifest.py  orchestrator.py  package_builder.py  receipt.py  relocator.py  retention.py  uninstall_service.py  upgrade_service.py
src/brewery/scripts/: clean.py  com.brewery.daemon.plist  com.brewery.outdated.plist  com.brewery.refresh.plist  fix_entry_point.py
tests/: conftest.py
tests/fixtures/: cask.json  formula.json  outdated.json
tests/integration/: _layout.py  conftest.py  test_cache.py  test_catalog.py  test_catalog_refresh.py  test_downloading.py  test_extraction.py  test_fs_state.py  test_providers.py  test_relocation.py  test_repo.py
tests/unit/: _stubs.py  conftest.py  test_brew.py  test_catalog_api.py  test_catalog_parser.py  test_cellar.py  test_config.py  test_daemon.py  test_decorators.py  test_downloader.py  test_errors.py  test_extractor.py  test_host.py  test_install_adapters.py  test_install_service.py  test_linker.py  test_main.py  test_manifest.py  test_merge.py  test_models.py  test_orchestrator.py  test_receipt.py  test_relocator.py  test_renderers.py  test_retention.py  test_shell.py  test_status.py  test_uninstall_service.py  test_upgrade_service.py
