[build-system]
requires = ["uv_build>=0.11.19,<0.12"]
build-backend = "uv_build"

[project]
name = "brewery"
version = "0.1.0"
description = "Minimal Homebrew Package Manager"
requires-python = ">=3.11"
dependencies = [
  "httpx[brotli,zstd]>=0.28.0,<1.0.0",
  "orjson>=3.11.9,<4.0.0",
  "pygments>=2.20.0",
  "readchar>=4.0.0,<5.0.0",
  "rich>=15.0.0,<16.0.0",
  "typer-extensions>=0.3.0,<1.0.0"
]

[project.scripts]
brewery = "brewery.cli.main:main"
br = "brewery.cli.main:main"

[project.optional-dependencies]
dev = [
  "icecream>=2.2.0,<3.0.0",
  "prek>=0.4.5,<1.0.0",
  "pytest>=9.0.3,<10.0.0",
  "pytest-asyncio>=1.4.0,<2.0.0",
  "pytest-cov>=7.1.0,<8.0.0",
  "ruff>=0.15.20,<0.16.0",
  "rust-just>=1.54.0,<2.0.0",
  "ty>=0.0.55,<1.0.0"
]

[tool.uv.build-backend]
module-name = "brewery"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "unit: fast isolated tests with no subprocess or network",
  "integration: tests that exercise the provider pipeline against fixtures",
]
